[package]
name = "scf_streaming_payments"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
testutils = ["soroban-sdk/testutils"]


[dependencies]
soroban-sdk = "21.1.1"
numtoa = "0.2.4"

[dev_dependencies]
soroban-sdk = { version = "21.1.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = false
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true